# Calligraphy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .woodpecker.yml  Calligraphy.doap  Makefile  README.md  REVIVING.md  calligraphy.doap  io.gitlab.gregorni.Calligraphy.json  justfile  meson.build  update_translations.sh
build-aux/: blueprint-compiler.json  dev.geopjr.Calligraphy.Devel.json
data/: dev.geopjr.Calligraphy.desktop.in  dev.geopjr.Calligraphy.gschema.xml  dev.geopjr.Calligraphy.metainfo.xml.in  gresource.xml  io.gitlab.gregorni.Calligraphy.appdata.xml.in  io.gitlab.gregorni.Calligraphy.desktop.in  io.gitlab.gregorni.Calligraphy.gschema.xml  io.gitlab.gregorni.Calligraphy.metainfo.xml.in  meson.build  style-dark.css  style.css
data/gtk/: font-preview-card.ui  font-view-page.ui  help-overlay.ui  shortcuts-dialog.ui  window.ui
data/icons/: meson.build
po/: LINGUAS  POTFILES  ar.po  calligraphy.pot  de.po  dev.geopjr.Calligraphy.pot  el.po  es.po  et.po  fi.po  fr.po  hi.po  hr.po  meson.build  nl.po  nn.po  oc.po  pt_BR.po  ru.po  sv.po  tr.po  uk.po  zh_Hans.po
src/: calligraphy.gresource.xml  calligraphy.in  env.py.in  font_preview.py  font_preview_card.py  font_view_page.py  fonts_list.py  get_text_view_text.py  main.py  meson.build  save_file.py  style-dark.css  style.css  update_button_sensitivity.py  window.blp  window.py
src/Utils/: fonts_list.py  get_text_view_text.py  is_rtl.py  meson.build  update_button_sensitivity.py
src/Views/: meson.build  window.py
src/Widgets/: font_preview.py  font_preview_card.py  font_view_page.py  meson.build
src/gtk/: font-preview-card.blp  font-view-page.blp  help-overlay.blp  window.blp
